# flox

./: CMakeLists.txt
benchmarks/: CMakeLists.txt  lockfree_order_book_benchmark.cpp
demo/: CMakeLists.txt
demo/src/: error_handling_demo.cpp
docs/: error_handling.md
docs/components/: lockfree_order_book.md
include/flox/book/: lockfree_order_book.h
include/flox/engine/: abstract_engine.h  engine.h  engine_config.h  error_aware_engine.h
include/flox/execution/: error_aware_executor.h  order_executor.h
include/flox/position/: position_manager.h
include/flox/util/base/: decimal.h
include/flox/util/error/: error_system.h
include/flox/util/eventing/: event_bus.h
include/flox/util/performance/: cpu_affinity.h
src/engine/: engine.cpp  error_aware_engine.cpp
src/execution/: error_aware_executor.cpp  order_executor.cpp
src/position/: position_manager.cpp
src/util/: error_system.cpp
tests/: CMakeLists.txt  test_cpu_affinity.cpp  test_engine_smoke.cpp  test_error_system.cpp  test_lockfree_order_book.cpp  test_ref_countable.cpp
